[package]
name = "vimeo-rs"
description = "vimeo contents for Rust"
version = "0.1.5"
rust-version = "1.56"
categories = ["multimedia"]
keywords = ["vimeo"]
edition = "2021"
authors = ["Yoshiki Kudo <actionstar620@yahoo.co.jp>"]
license = "MIT"
repository = "https://github.com/335g/vimeo-rs"
readme = "README.md"

[badges]
github = { repository = "335g/vimeo-rs", workflow = "Rust" }

[features]
default = []
progressbar = ["indicatif"]

[dependencies]
async-trait = "0.1"
base64 = "0.13"
easy-scraper = "0.2"
http = "0.2"
indicatif = { version = "0.17.0-beta.1", optional = true }
log = "0.4"
regex = "1.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.14", features = ["io-std", "io-util", "fs", "rt", "sync"]}
tempfile = "3.2"
thiserror = "1.0"
url = "2.2"
which = "4.2"

#[dev-dependencies]
#tokio = { version = "1.14", features = ["macros", "rt-multi-thread"] }
#env_logger = "0.9"