[package]
name = "vimeo-rs"
description = "vimeo contents for Rust"
version = "0.1.7"
rust-version = "1.56"
categories = ["multimedia"]
keywords = ["vimeo"]
edition = "2021"
authors = ["Yoshiki Kudo <actionstar620@yahoo.co.jp>"]
license = "MIT"
repository = "https://github.com/335g/vimeo-rs"
readme = "README.md"

[badges]
github = { repository = "335g/vimeo-rs", workflow = "Rust" }

[features]
default = []

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = [ "sync", "macros", "parking_lot"] }
thiserror = "1"
url = { version = "2.4", features = ["serde"] }
which = "4.4"

[dev-dependencies]
